--- a/v9/package.json
+++ b/v9/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/xrm": "^9",
     "dtslint": "^4.1.6",
+    "tar": "^6.1.11",
     "typescript": "^4.4.4"
   },
   "files": [
